--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ print("Sorted array:", sorted_arr)
         </div>
 
         <footer id="footer">
-            <p>&copy; BRYX</p>
+            <p>&copy; XRYB</p>
         </footer>
     </div>
 
