--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Informative Showcase Algorithms</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -39,7 +39,6 @@
                                 <li><a href="#dfs">DFS</a></li>
                             </ul>
                         </li>
-                        <li><a href="#shortest-path">Shortest Path</a></li>
                     </ul>
                 </li>
                 <li>
@@ -288,7 +287,7 @@ print("Sorted array:", sorted_arr)
             <article id="linked-lists">
                 <h2>Linked Lists</h2>
                 <p>A linked list consists of nodes with some sort of data, and a pointer, or link, to the next node.</p>
-                <img src="l;inklist.png" alt="link">
+
             </article>
 
             <article id="singly-linked">
@@ -376,7 +375,7 @@ print("Sorted array:", sorted_arr)
         </div>
 
         <footer id="footer">
-            <p>&copy; XRYB</p>
+            <p>&copy; XYRB</p>
         </footer>
     </div>
 
